kubernetes/apps/default/ersatztv/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ersatztv
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - tvadmin.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ersatztv
          port: 8409
